--- a/love/css.css
+++ b/love/css.css
@@ -10,8 +10,6 @@
 }
 
 #second {
-  /* width: 50%;
-  height: 50%; */
   margin: auto;
   position: absolute;
   top: 8rem;
@@ -31,29 +29,108 @@
 .hero-smalltext {
   padding-left: 5rem;
   padding-right: 5rem;
+  line-height: 1px;
+  font-size: 5rem;
 }
-
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 300px) {
+  #second {
+    top: 0rem;
+  }
+  .hero-largetext {
+    font-size: 1.5rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
+    margin: 10px;
+    line-height: 21px;
+  }
+
+  .hero-smalltext {
+    font-size: 20px;
+    line-height: 21px;
+  }
+
+  .btn {
+    padding-left: 0rem;
+    padding-right: 0rem;
+    padding-top: 0rem;
+    font-size: 0.75rem;
+
+    border-radius: 1.5rem;
+  }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   #second {
-    top: 1.5rem;
+    top: 3rem;
   }
   .hero-largetext {
-    font-size: 2.5rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    font-size: 3.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     margin: 10px;
+    line-height: 54px;
+  }
+
+  .hero-smalltext {
+    font-size: 6px;
+    line-height: 7px;
+    margin-bottom: 10px;
   }
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  #second {
+    top: 4rem;
+  }
+  .hero-largetext {
+    font-size: 3.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin: 10px;
+    line-height: 54px;
+  }
+
+  .hero-smalltext {
+    font-size: 20px;
+    line-height: 21px;
+  }
 }
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  #second {
+    top: 5rem;
+  }
+  .hero-largetext {
+    font-weight: bold;
+    font-size: 5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 30px;
+    line-height: 77px;
+  }
+
+  .hero-smalltext {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1024px) {
+  #second {
+    top: 6rem;
+  }
+  .hero-largetext {
+    font-weight: bold;
+    font-size: 5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 30px;
+    line-height: 77px;
+  }
+
+  .hero-smalltext {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
